--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,21 @@ services:
       POSTGRES_DB: donnut
     ports:
       - "5432:5432"
+    healthcheck:  # Adicionando healthcheck
+      test: ["CMD-SHELL", "pg_isready -U root"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+  
+  backend:
+      build: ./backend
+      depends_on:
+        db:
+          condition: service_healthy
+      environment:
+        DATABASE_URL: postgresql://root:123456@db:5432/donnut
+      links:
+        - db
+      ports:
+        - "3000:3000"
+      command: sh -c "npm start"
