--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@sequelize/postgres": "^7.0.0-alpha.42",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4"
